# Terrorism-Bot

./: .replit  README.md  pyproject.toml
src/: discord.py  main.py  settings.json
