[tool.poetry]
name = "repl_python3_Terrorism-Bot-1"
version = "0.1.0"
description = ""
authors = ["SachsTheBased <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
